# slam-eds

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  EDS.h
src/bundles/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  BundleAdjustment.cpp  BundleAdjustment.hpp  Config.hpp  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  PhotometricBAError.hpp  RawResidualJacobian.h
src/init/: CoarseInitializer.cpp  CoarseInitializer.h
src/io/: ImageConvert.cpp  ImageConvert.h  ImageRW.cpp  ImageRW.h  OutputMaps.cpp  OutputMaps.h
src/mapping/: Config.hpp  DepthPoints.cpp  DepthPoints.hpp  GlobalMap.cpp  GlobalMap.hpp  PixelSelector.cpp  PixelSelector.h  Types.hpp
src/tracking/: CoarseTracker.cpp  CoarseTracker.h  Config.hpp  EventFrame.cpp  EventFrame.hpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  KeyFrame.cpp  KeyFrame.hpp  PhotometricError.hpp  PhotometricErrorNC.hpp  ResidualProjections.h  Residuals.cpp  Residuals.h  Tracker.cpp  Tracker.hpp  Types.hpp
src/utils/: Calib.cpp  Calib.hpp  Colormap.cpp  Colormap.hpp  Config.hpp  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  KDTree.hpp  MinimalImage.h  NumType.h  Transforms.hpp  Undistort.cpp  Undistort.h  Utils.cpp  Utils.hpp  globalCalib.cpp  globalCalib.h  globalFuncs.h  settings.cpp
test/: CMakeLists.txt  suite.cpp  test_bundles.cpp  test_calib.cpp  test_colormap.cpp  test_initialization.cpp  test_mapping.cpp  test_patches.cpp  test_sophus.cpp  test_tracking.cpp  test_umeyama.cpp  test_yaml.cpp
test/data/: calib.txt  calib_atrium.txt  camera_calib.yaml  camera_info_atrium.yaml  eds.yaml  events.txt
